--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-        <link rel="manifest" href="/site.webmanifest" />
+        <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
+        <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
+        <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
+        <link rel="manifest" href="site.webmanifest" />
         <title>VOLUME</title>
 
         <script src="jquery-3.5.1.min.js"></script>
@@ -19,6 +19,7 @@
                 const text = $('#text')
                 const slogan = $('#slogan')
                 const buttons = $('#buttons')
+                const buttonSpacer = $('#buttonSpacer')
                 // const social = $('#social')
 
                 const vCanvas = $('#bars')
@@ -36,11 +37,89 @@
                     $('#footerSpacer').css('height', '100px')
                 }
 
-                if (window.innerWidth >= 768) {
-                    if (window.innerWidth < 1000) {
-                        const padding = 300 - (1000 - window.innerWidth) + 48
-                        $('#contact').css('padding-left', padding + 'px')
+                let animationsFinished = false
+
+                function largeScreen() {
+                    $('#textWrapper').css('margin-top', '-120px')
+                    text.css('width', '600px')
+                    $('#textWrapper').css('width', '600px')
+                    buttons.css('display', 'flex')
+                    $('.button, .buttonLabel').css('margin-left', '30px')
+                    $('.header').css('margin-left', '30px')
+                    $('#contact').css('padding', '0')
+
+                    if (animationsFinished) {
+                        vCanvas.hide()
+                        eCanvas.hide()
+                        logo.css('width', '200px')
+                        $('#textWrapper').css('margin-top', '-15px')
+                    } else {
+                        vCanvas.show()
+                        eCanvas.show()
+                        logo.css('width', '600px')
+                        $('#textWrapper').css('margin-top', '-120px')
+                        buttons.hide()
                     }
+
+                    if (window.innerWidth < 1000) {
+                        const buttonSpacerWidth = 300 - (1000 - window.innerWidth)
+                        buttonSpacer.css('width', buttonSpacerWidth + 'px')
+                    }
+                }
+
+                function smallScreen() {
+                    vCanvas.hide()
+                    eCanvas.hide()
+                    $('#textWrapper').css('width', '300px')
+                    $('#textWrapper').css('margin-top', '-10px')
+                    text.css('width', '300px')
+                    buttons.css('display', 'block').hide()
+                    $('.button, .buttonLabel').css('margin-left', '6px')
+                    $('.header').css('margin-left', '8px')
+                    $('#contact').css('padding', '48px 0')
+
+                    if (animationsFinished) {
+                        logo.css('width', '100px')
+                        logo.show()
+                        text.show()
+                        slogan.show()
+                        buttons.show()
+                        // social.show()
+                    } else {
+                        logo.css('width', '300px')
+                        logo.fadeIn(30 * timeScale, () => {
+                            logo.animate({width: '100px'}, 10 * timeScale, () => {
+                                text.fadeIn(10 * timeScale, () => {
+                                    slogan.fadeIn(15 * timeScale, () => {
+                                        buttons.fadeIn(10 * timeScale, () => {
+                                            // social.fadeIn(10 * timeScale)
+                                            animationsFinished = true
+                                        })
+                                    })
+                                })
+                            })
+                        })
+                    }
+                }
+
+                window.onresize = () => {
+                    if (window.innerWidth >= 768 && window.innerHeight >= 600) {
+                        largeScreen()
+                    } else {
+                        smallScreen()
+                    }
+                }
+
+                window.onorientationchange = () => {
+                    if (window.innerWidth >= 768 && window.innerHeight >= 600) {
+                        largeScreen()
+                    } else {
+                        smallScreen()
+                    }
+                }
+
+                if (window.innerWidth >= 768 && window.innerHeight >= 600) {
+                    largeScreen()
 
                     logo.fadeIn(60 * timeScale, () => {
                         isStopping = true
@@ -59,6 +138,7 @@
                                         slogan.fadeIn(15 * timeScale, () => {
                                             buttons.fadeIn(10 * timeScale, () => {
                                                 // social.fadeIn(10 * timeScale)
+                                                animationsFinished = true
                                             })
                                         })
                                     }, 15 * timeScale)
@@ -177,26 +257,7 @@
 
                     startBars()
                 } else {
-                    vCanvas.remove()
-                    eCanvas.remove()
-                    logo.css('width', '300px')
-                    $('#textWrapper').css('width', '300px')
-                    $('#textWrapper').css('margin-top', '-10px')
-                    text.css('width', '300px')
-                    buttons.css('display', 'block').hide()
-                    $('#contact').css('padding', '24px 48px 0 24px')
-
-                    logo.fadeIn(30 * timeScale, () => {
-                        logo.animate({width: '100px'}, 10 * timeScale, () => {
-                            text.fadeIn(10 * timeScale, () => {
-                                slogan.fadeIn(15 * timeScale, () => {
-                                    buttons.fadeIn(10 * timeScale, () => {
-                                        // social.fadeIn(10 * timeScale)
-                                    })
-                                })
-                            })
-                        })
-                    })
+                    smallScreen()
                 }
 
                 $('html, body').show()
@@ -213,7 +274,7 @@
                 font-size: 20px;
                 text-align: center;
                 display: none;
-                margin: 0;
+                margin-left: 0;
             }
 
             #bars {
@@ -280,13 +341,13 @@
                 width: 300px;
             }
 
-            #apply {
+            /* #apply {
                 padding-left: 24px;
             }
 
             #contact {
                 padding: 0 48px 0 300px;
-            }
+            } */
 
             .buttonLabel {
                 margin-left: 34px;
@@ -336,6 +397,7 @@
 
             .list {
                 text-align: left;
+                margin-left: -12px;
             }
 
             .bulletWrapper {
@@ -450,9 +512,11 @@
                     </div>
                     <br />
                     <div class="buttonLabel">MUSICIAN BETA TESTERS NEEDED</div>
-                    <a href="https://forms.gle/gwKHBMTeTiMm4t83A"><div class="button">HIRING NOW!</div></a>
+                    <a href="https://forms.gle/gwKHBMTeTiMm4t83A">
+                        <div class="button">HIRING NOW!</div>
+                    </a>
                 </div>
-
+                <div id="buttonSpacer"></div>
                 <div id="contact">
                     <div class="header">WANNA WATCH?</div>
 
@@ -518,7 +582,9 @@
                     </div>
                     <br />
                     <div class="buttonLabel">EARLY ACCESS SIGN UP</div>
-                    <a href="https://forms.gle/FKaaJRMdL34uRHWa6"><div class="button">COUNT ME IN!</div></a>
+                    <a href="https://forms.gle/FKaaJRMdL34uRHWa6">
+                        <div class="button">COUNT ME IN!</div>
+                    </a>
                 </div>
             </div>
         </div>
