Updated landing page

--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -47,6 +47,8 @@
                     $('.button, .buttonLabel').css('margin-left', '30px')
                     $('.header').css('margin-left', '30px')
                     $('#contact').css('padding', '0')
+                    slogan.css('margin-top', '60px')
+                    $('#buttons > div').css('margin-top', '60px')
 
                     if (animationsFinished) {
                         vCanvas.hide()
@@ -76,7 +78,9 @@
                     buttons.css('display', 'block').hide()
                     $('.button, .buttonLabel').css('margin-left', '6px')
                     $('.header').css('margin-left', '8px')
-                    $('#contact').css('padding', '48px 0')
+                    $('#contact').css('padding', '18px 0')
+                    slogan.css('margin-top', '30px')
+                    $('#buttons > div').css('margin-top', '30px')
 
                     if (animationsFinished) {
                         logo.css('width', '100px')
@@ -314,15 +318,15 @@
             }
 
             #slogan {
-                color: #e9983d;
+                color: #FEDB5D;
                 display: none;
-                margin-top: 30px;
+                margin-top: 60px;
                 font-size: 26px;
             }
 
             strong {
                 font-weight: normal;
-                color: #da3a31;
+                color: #F03AC1;
             }
 
             #buttonsWrapper {
@@ -336,7 +340,7 @@
             #buttons > div {
                 flex: 1;
                 color: #ccc;
-                margin-top: 30px;
+                margin-top: 60px;
                 font-size: 14px;
                 width: 300px;
             }
@@ -351,7 +355,7 @@
 
             .buttonLabel {
                 margin-left: 34px;
-                font-weight: bold;
+                /* font-weight: bold; */
                 font-size: 14px;
             }
 
@@ -359,22 +363,22 @@
                 display: inline-block;
                 font-size: 26px;
                 font-weight: bold;
-                background-color: #da3a31;
+                background-color: #F03AC1;
                 border-radius: 6px;
                 width: 200px;
                 padding: 10px 16px 8px 16px;
                 margin: 8px 0 0 30px;
-                text-shadow: 0 0 4px #611815;
+                text-shadow: 0 0 4px #2d0a24;
                 color: #fff;
             }
 
             #contact > a > .button {
-                background-color: #e9983d;
-                text-shadow: 0 0 4px #642f18;
+                background-color: #00E3CC;
+                text-shadow: 0 0 4px #001d1a;
             }
 
             #contact > .header {
-                color: #e9983d;
+                color: #00E3CC;
             }
 
             #social {
@@ -391,7 +395,7 @@
             .header {
                 font-size: 20px;
                 font-weight: bold;
-                color: #da3a31;
+                color: #F03AC1;
                 margin: 0 0 10px 24px;
             }
 
@@ -408,14 +412,14 @@
             .bullet {
                 width: 12px;
                 height: 12px;
-                background-color: #da3a31;
+                background-color: #F03AC1;
                 border-radius: 50%;
                 position: relative;
                 top: -4px;
             }
 
             #contact .bullet {
-                background-color: #e9983d;
+                background-color: #00E3CC;
             }
 
             .bulletText {
@@ -440,150 +444,24 @@
         </div>
         <br />
 
-        <div id="slogan">IT'S ABOUT TO GET <strong>LOUD</strong></div>
+        <div id="slogan">COMING SOON</div>
         <br />
 
         <div id="buttonsWrapper">
             <div id="buttons">
                 <div id="apply">
-                    <div class="header">WANNA STREAM?</div>
-
-                    <div class="list">
-                        <div class="bulletWrapper">
-                            <span>
-                                <div class="bullet"></div>
-                            </span>
-                            <span>
-                                <div class="bulletText">
-                                    Customize your sound with built-in audio effects using our browser based plugins
-                                </div>
-                            </span>
-                        </div>
-                        <div class="bulletWrapper">
-                            <span>
-                                <div class="bullet"></div>
-                            </span>
-                            <span>
-                                <div class="bulletText">
-                                    Dial in your show and effects presets with our proprietary soundcheck feature
-                                </div>
-                            </span>
-                        </div>
-                        <div class="bulletWrapper">
-                            <span>
-                                <div class="bullet"></div>
-                            </span>
-                            <span>
-                                <div class="bulletText">
-                                    24/7 support team to assist artists with any audio and video complications
-                                </div>
-                            </span>
-                        </div>
-                        <div class="bulletWrapper">
-                            <span>
-                                <div class="bullet"></div>
-                            </span>
-                            <span>
-                                <div class="bulletText">
-                                    Earn cash from tips and daily contest winnings with quick and easy payouts
-                                </div>
-                            </span>
-                        </div>
-                        <div class="bulletWrapper">
-                            <span>
-                                <div class="bullet"></div>
-                            </span>
-                            <span>
-                                <div class="bulletText">
-                                    Expand your fan base with an immediate global audience
-                                </div>
-                            </span>
-                        </div>
-                        <div class="bulletWrapper">
-                            <span>
-                                <div class="bullet"></div>
-                            </span>
-                            <span>
-                                <div class="bulletText">
-                                    Offering $30 as an early access signing bonus for your first hour of streaming
-                                </div>
-                            </span>
-                        </div>
-                    </div>
-                    <br />
-                    <div class="buttonLabel">MUSICIAN BETA TESTERS NEEDED</div>
-                    <a href="https://forms.gle/gwKHBMTeTiMm4t83A">
-                        <div class="button">HIRING NOW!</div>
+                    <div class="header">STREAM</div>
+                    <div class="buttonLabel">Want to be one of our first beta testers and earn an early access signing bonus?</div>
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLScrrFqwRlwK0k4jRvp3BCxMqRJamQF-BURuUQof63wxgP7rxA/viewform?usp=sf_link">
+                        <div class="button">SIGN UP HERE</div>
                     </a>
                 </div>
                 <div id="buttonSpacer"></div>
                 <div id="contact">
-                    <div class="header">WANNA WATCH?</div>
-
-                    <div class="list">
-                        <div class="bulletWrapper">
-                            <span>
-                                <div class="bullet"></div>
-                            </span>
-                            <span>
-                                <div class="bulletText">
-                                    Discover a variety of diverse and talented artists from around the world
-                                </div>
-                            </span>
-                        </div>
-                        <div class="bulletWrapper">
-                            <span>
-                                <div class="bullet"></div>
-                            </span>
-                            <span>
-                                <div class="bulletText">
-                                    Be front and center with your favorite artist in ticketed private events
-                                </div>
-                            </span>
-                        </div>
-                        <div class="bulletWrapper">
-                            <span>
-                                <div class="bullet"></div>
-                            </span>
-                            <span>
-                                <div class="bulletText">
-                                    Real time interaction with your favorite performers and other fans
-                                </div>
-                            </span>
-                        </div>
-                        <div class="bulletWrapper">
-                            <span>
-                                <div class="bullet"></div>
-                            </span>
-                            <span>
-                                <div class="bulletText">
-                                    Show artists your support through on site tipping and buying merch
-                                </div>
-                            </span>
-                        </div>
-                        <div class="bulletWrapper">
-                            <span>
-                                <div class="bullet"></div>
-                            </span>
-                            <span>
-                                <div class="bulletText">
-                                    Send private messages to performers and other viewers
-                                </div>
-                            </span>
-                        </div>
-                        <div class="bulletWrapper">
-                            <span>
-                                <div class="bullet"></div>
-                            </span>
-                            <span>
-                                <div class="bulletText">Offering 200 tokens as an early access signing bonus</div>
-                            </span>
-                        </div>
-                    </div>
-                    <br />
-                    <div class="buttonLabel">EARLY ACCESS SIGN UP</div>
-                    <a href="https://forms.gle/FKaaJRMdL34uRHWa6">
-                        <div class="button">COUNT ME IN!</div>
+                    <div class="header">WATCH</div>
+                    <div class="buttonLabel">Want to be one of the first to get early access and discover talented artists?</div>
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSexjdgNz8k74do735fsGJAL1R2arg3xovKXhBOxR9qNnkAAkA/viewform?usp=sf_link">
+                        <div class="button">SIGN UP HERE</div>
                     </a>
                 </div>
             </div>
